[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dfcv_colocation_mapping"
version = "0.0.1"
authors = [
  { name="Isabelle Tingzon", email="issatingzon@gmail.com" },
]
description = "A package for mapping multi-hazard and conflict co-location in FCV countries."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/dfcv_colocation_mapping"
Issues = "https://github.com/pypa/dfcv_colocation_mapping/issues"