[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfcv_colocation_mapping"
version = "0.5.2"
authors = [
  { name="Isabelle Tingzon"},
]
description = "A package for mapping multi-hazard and conflict co-location in FCV countries."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "ahpy == 2.0",
    "folium == 0.19.5",
    "GDAL == 3.6.2",
    "geojson == 3.2.0",
    "geojson_rewind == 1.1.0",
    "geopandas == 1.0.1",
    "humanize == 4.12.3",
    "matplotlib == 3.10.1",
    "numpy == 1.26.4",
    "pandas == 2.2.3",
    "pycountry == 24.6.1",
    "pyfonts == 1.1.1",
    "pypalettes == 0.1.6",
    "pyproj == 3.7.1",
    "PyYAML == 6.0.2",
    "rasterio == 1.4.3",
    "rasterstats == 0.20.0",
    "requests == 2.32.3",
    "seaborn == 0.13.2",
    "shapely == 2.0.7",
    "importlib_resources == 6.5.2",
    "vincenty==0.1.4",
    "osmnx==2.0.6",
    "dtmapi==0.1.5",
    "colormaps==0.4.2"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dfcv_colocation_mapping = ["configs/*.yaml"]

[project.urls]
Homepage = "https://github.com/GFDRR/disaster-fcv-colocation-mapping"
Issues = "https://github.com/GFDRR/disaster-fcv-colocation-mapping/issues"